--- a/app/src/main/res/layout/newuser.xml
+++ b/app/src/main/res/layout/newuser.xml
@@ -178,6 +178,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
                     android:text="@string/lblQuestion" />
 
                 <LinearLayout
@@ -255,12 +256,6 @@
                     android:text="@string/lblViewWebContent" />
             </TableRow>
         </TableLayout>
-
-        <CheckBox
-            android:id="@+id/ckOver14"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/lblOver14" />
 
         <TextView
             android:layout_width="wrap_content"
