--- a/app/src/main/res/layout/webview.xml
+++ b/app/src/main/res/layout/webview.xml
@@ -5,8 +5,40 @@
     android:addStatesFromChildren="false"
     android:orientation="vertical">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:background="#010101">
+        <Button
+            android:id="@+id/btnWebBack"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawableStart="@drawable/ic_action_back"
+            style="?android:attr/buttonBarStyle"
+            android:text="" />
+
+        <Button
+            android:id="@+id/btnWebForward"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawableStart="@drawable/ic_action_forward"
+            style="?android:attr/buttonBarStyle"
+            android:text="" />
+
+        <Button
+            android:id="@+id/btnWebRefresh"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawableStart="@drawable/ic_action_refresh"
+            style="?android:attr/buttonBarStyle"
+            android:text="" />
+
+    </LinearLayout>
+
     <WebView
         android:id="@+id/wvMain"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent" />
+        android:layout_height="fill_parent" >
+    </WebView>
 </LinearLayout>
