Issue #65: show only active aircraft by default

--- a/app/src/main/res/layout-land/flightquery.xml
+++ b/app/src/main/res/layout-land/flightquery.xml
@@ -224,10 +224,24 @@
             android:focusable="true"
             android:text="@string/fqFlightAircraft" />
 
-        <TableLayout
-            android:id="@+id/tblFQAircraft"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:id="@+id/llfqAircraft">
+            <TableLayout
+                android:id="@+id/tblFQAircraft"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/fqShowAllAircraft"
+                android:id="@+id/btnShowAllAircraft"
+                style="?android:attr/buttonBarStyle"
+                android:layout_gravity="center"
+                />
+        </LinearLayout>
 
         <!-- Aircraft Features -->
 
