--- a/app/src/main/res/layout/flightquery.xml
+++ b/app/src/main/res/layout/flightquery.xml
@@ -219,11 +219,24 @@
             android:drawableStart="@drawable/collapse_light"
             android:text="@string/fqFlightAircraft" />
 
-        <TableLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/tblFQAircraft">
-        </TableLayout>
+            android:orientation="vertical"
+            android:id="@+id/llfqAircraft">
+            <TableLayout
+                android:id="@+id/tblFQAircraft"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/fqShowAllAircraft"
+                android:id="@+id/btnShowAllAircraft"
+                style="?android:attr/buttonBarStyle"
+                android:layout_gravity="center"
+                />
+        </LinearLayout>
 
         <!-- Aircraft Features -->
         <TextView
