Issue #67: display more information (consistent with iOS similar issue number 13).  Doing similar less blocky format: larger date, bold aircraft, gray italic route, and display times using HTML.  Nicer layout.  Like iOS, added an option to turn display of times on/off to handle clutter.

--- a/app/src/main/res/layout-land/options.xml
+++ b/app/src/main/res/layout-land/options.xml
@@ -215,6 +215,12 @@
             android:id="@+id/ckShowFlightImages"
             android:text="@string/lblShowFlightImages" />
 
+        <CheckBox
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/ckShowFlightTimes"
+            android:text="@string/lblShowFlightTimes" />
+
         <TextView
             style="@style/DividerBar"
             android:text="@string/lblAdditionalOptions" />
