--- a/app/src/main/res/layout/propertyedit.xml
+++ b/app/src/main/res/layout/propertyedit.xml
@@ -42,7 +42,7 @@
             android:visibility="gone" />
 
         <TextView
-            android:id="@id/txtDate"
+            android:id="@+id/txtDate"
             style="@style/DateButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
