Issue #11: add support for canned queries.
Although CannedQuery is properly a subclass of FlightQuery, I put QueryName into the FlightQuery object...

Also fixed a bug with visibility in CustomPropertyType and with safe parsing of a possibly missing Description

--- a/app/src/main/res/layout/flightquery.xml
+++ b/app/src/main/res/layout/flightquery.xml
@@ -554,5 +554,38 @@
             android:layout_height="wrap_content"
             android:id="@+id/tblFQProps">
         </TableLayout>
+
+        <!--  Named Queries -->
+        <TextView
+            style="@style/DividerBar"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/txtFQNamedQueryHeader"
+            android:clickable="true"
+            android:focusable="true"
+            android:drawableStart="@drawable/collapse_light"
+            android:text="@string/fqQueryNameHeader" />
+
+        <LinearLayout
+            android:id="@+id/sectFQNamedQueries"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/fqQueryNameHeaderDesc" />
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textCapWords"
+                android:hint="@string/fqQueryNamePrompt"
+                android:id="@+id/txtNameForQuery" />
+            <TableLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/tblFQNamedQueries">
+            </TableLayout>
+        </LinearLayout>
     </LinearLayout>
 </ScrollView>
